--- a/EventsAppSample/app/src/main/res/values/strings.xml
+++ b/EventsAppSample/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="txt_name">Nome</string>
     <string name="txt_email">Email</string>
     <string name="txt_confirm">Confirmar</string>
-    <string name="txt_check_in_success">CheckIn efetuado com Sucesso!!</string>
+    <string name="txt_check_in_success">Check-In efetuado com Sucesso!!</string>
     <string name="txt_check_in_error">Ocorreu um erro ao efetuar o CheckIn</string>
     <string name="txt_fill_name">Por favor, preencha o nome</string>
     <string name="txt_fill_email">Por favor, preencha o e-mail</string>
